	PR c++/29363 	* decl.c (create_implicit_typedef): Set TYPE_STUB_DECL here. 	(cxx_init_decl_processing): Not here. 	* name-lookup.c (pushtag): Or here. 	* pt.c (lookup_template_class): Or here.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@154163 138bc75d-0d04-0410-961f-82ee72b054a4