gcc/testsuite/g++.dg/template/error43.C
@@ -1,0 +1,9 @@
+// PR c++/29363
+
+template<int> void foo()
+{
+  throw A();			// { dg-message "declar" }
+  struct A {} a;
+}
+
+template void foo<0>();		// { dg-message "instantiated" }
